--- a/src/app/cafe/listado-cafe/listado-cafe.component.html
+++ b/src/app/cafe/listado-cafe/listado-cafe.component.html
@@ -1,1 +1,34 @@
-<p>listado-cafe works!</p>
+<div class="contenedor mt-4">
+  <div class="row">
+    <div class="col-lg-12">
+      <h2>El aroma mágico</h2>
+    </div>
+    <hr>
+    <hr>
+    <img class="img-fluid" src="assets/banner.png" alt="El aroma mágico">
+    <div class="col mt-2">
+      <table class="table table-dark">
+        <thead>
+          <tr class="number-table">
+            <th> # </th>
+            <th> Nombre </th>
+            <th> Tipo </th>
+            <th> Región </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="table-light"  *ngFor="let cafe of cafes; let i = index">
+            <td class="number-table" > {{ i + 1 }} </td>
+            <td> {{ cafe.nombre }} </td>
+            <td> {{ cafe.tipo }} </td>
+            <td> {{ cafe.region }} </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="col-lg-12 p-0">
+      <p class="m-0">Total café de origen: {{ totalCafeOrigen }}  </p>
+      <p class="m-0">Total café blend: {{ totalCafeBlend }} </p>
+    </div>
+  </div>
+</div>
